[gd_scene load_steps=20 format=3 uid="uid://dmse0udyckh74"]

[ext_resource type="Texture2D" uid="uid://c0grkjdcf4yeq" path="res://Assets/Buildings/Supermarket/supermarketsecondfloor.png" id="1_uoivs"]
[ext_resource type="Texture2D" uid="uid://dlpwa7abpet14" path="res://Assets/Buildings/Supermarket/helpers.png" id="2_y86s6"]
[ext_resource type="Script" uid="uid://bjxcv8jcsnuud" path="res://StoreSpace.gd" id="3_4fqwi"]
[ext_resource type="PackedScene" uid="uid://bmk00x3foc6mh" path="res://player.tscn" id="3_6ppaw"]
[ext_resource type="FontFile" uid="uid://cftei7vqpw6hk" path="res://Assets/UI/pkmnfl.ttf" id="3_k1xx1"]
[ext_resource type="PackedScene" uid="uid://cxubuyter2jwg" path="res://invisdoor.tscn" id="4_sjwm8"]
[ext_resource type="Script" uid="uid://bad4bx2bjs1e5" path="res://invisdoor3.gd" id="5_nf4kn"]
[ext_resource type="Script" uid="uid://jdrdqetnecxs" path="res://invisstairs.gd" id="6_6kf73"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1tjl"]
size = Vector2(56, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3d7b"]
size = Vector2(14, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6q5je"]
size = Vector2(46, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5e2ka"]
size = Vector2(30, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bic3k"]
size = Vector2(47, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fow5i"]
size = Vector2(48, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_akxd6"]
size = Vector2(46, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7trc"]
size = Vector2(20, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1r2b"]
size = Vector2(20, 236)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1wfgd"]
size = Vector2(114, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kolw3"]
size = Vector2(232, 22)

[node name="SupermarketFloor2" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -210.0
offset_top = -106.0
offset_right = 548.0
offset_bottom = 476.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_uoivs")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -210.0
offset_top = -106.0
offset_right = 336.0
offset_bottom = 8.0
color = Color(0, 0, 0, 1)

[node name="Helper" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(26, 102)
texture = ExtResource("2_y86s6")
flip_h = true
hframes = 3
frame = 2

[node name="StoreSpace" type="Area2D" parent="Helper"]
texture_filter = 1
collision_layer = 16
collision_mask = 16
script = ExtResource("3_4fqwi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Helper/StoreSpace"]
texture_filter = 1
position = Vector2(18, 6)
shape = SubResource("RectangleShape2D_l1tjl")

[node name="Label" type="Label" parent="Helper"]
visible = false
texture_filter = 1
offset_left = -26.0
offset_top = -30.0
offset_right = 34.0
offset_bottom = -7.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k1xx1")
theme_override_font_sizes/font_size = 10
text = "[E] to interact"

[node name="Helper2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(24, 138)
texture = ExtResource("2_y86s6")
hframes = 3

[node name="Player" parent="." instance=ExtResource("3_6ppaw")]
position = Vector2(128, 40)

[node name="Area2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(41, 118)
shape = SubResource("RectangleShape2D_n3d7b")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(25, 158)
shape = SubResource("RectangleShape2D_6q5je")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2(129, 156)
shape = SubResource("RectangleShape2D_5e2ka")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2(176, 158)
shape = SubResource("RectangleShape2D_5e2ka")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Area2D"]
position = Vector2(176, 222)
shape = SubResource("RectangleShape2D_5e2ka")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Area2D"]
position = Vector2(128, 222)
shape = SubResource("RectangleShape2D_5e2ka")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Area2D"]
position = Vector2(41, 191)
shape = SubResource("RectangleShape2D_bic3k")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Area2D"]
position = Vector2(40.5, 224)
shape = SubResource("RectangleShape2D_bic3k")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Area2D"]
position = Vector2(24, 51)
shape = SubResource("RectangleShape2D_fow5i")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Area2D"]
position = Vector2(185, 58)
shape = SubResource("RectangleShape2D_akxd6")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-10, 208)
shape = SubResource("RectangleShape2D_h7trc")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Area2D"]
position = Vector2(218, 134)
shape = SubResource("RectangleShape2D_g1r2b")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Area2D"]
position = Vector2(105, 19)
shape = SubResource("RectangleShape2D_1wfgd")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="Area2D"]
position = Vector2(98, 262)
shape = SubResource("RectangleShape2D_kolw3")

[node name="InvisDoor" parent="." instance=ExtResource("4_sjwm8")]
position = Vector2(48, 40)
collision_layer = 128
collision_mask = 128
script = ExtResource("5_nf4kn")
spawn_location = Vector2(72, 36)

[node name="InvisDoor2" parent="." instance=ExtResource("4_sjwm8")]
position = Vector2(144, 40)
collision_layer = 256
collision_mask = 256
script = ExtResource("6_6kf73")
next_scene_path = "res://supermarket_rooftop.tscn"
spawn_location = Vector2(220, 90)

[connection signal="body_entered" from="Helper/StoreSpace" to="Helper/StoreSpace" method="_on_body_entered"]
[connection signal="body_exited" from="Helper/StoreSpace" to="Helper/StoreSpace" method="_on_body_exited"]
[connection signal="store_exited" from="Helper/StoreSpace" to="Player" method="_on_store_space_store_exited"]
[connection signal="store_interacted" from="Helper/StoreSpace" to="Player" method="_on_store_space_store_interacted"]
